--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -15,11 +15,11 @@
                 <ion-col>
                     <ion-list inset="">
                         <ion-item>
-                            <ion-input name="email" [(ngModel)]="regData.email" placeholder="Email" required="" type="text">
+                            <ion-input name="email" [(ngModel)]="loginData.email" placeholder="Email" required="" type="text">
                             </ion-input>
                         </ion-item>
                         <ion-item>
-                            <ion-input  name="password" [(ngModel)]="regData.password" placeholder="Password" required="" type="password">
+                            <ion-input  name="password" [(ngModel)]="loginData.password" placeholder="Password" required="" type="password">
                             </ion-input>
                         </ion-item>
                     </ion-list>
